US-04: tag validation, duplicate and in-use checks; refactor tags to builder/mapper pattern